[gd_scene load_steps=2 format=3 uid="uid://66c53np0o6ct"]

[ext_resource type="Script" path="res://scripts/mouse_sensitivity_manager.gd" id="1_h7cgk"]

[node name="Mouse_sensitivity" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_h7cgk")

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "     Camera speed"
vertical_alignment = 1

[node name="SpeedSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(890, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SpeedPercentageLabel" type="Label" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "XX%"
vertical_alignment = 1

[connection signal="changed" from="SpeedSlider" to="." method="_on_sensitivity_slider_changed"]
